# wordle-solver-py

./: pyproject.toml  readme.md
proto/: Letter frequencies.ipynb  readme.md
src/: Untitled.ipynb
src/wordle/: __init__.py  benchmark.py  game.py  main.py
src/wordle/challenges/: challenge.py  mock_challenge.py  random_challenge.py
src/wordle/solvers/: interactive_solver.py  letter_freq_solver.py  solver.py
